SERVER-83485 Fix multikey-path serialization code used during validation

(cherry picked from commit 36ea8726cdad6c7fc0daedb3a5784a1722df9e5f)
(cherry picked from commit 8bd102102b26579cb75432e1822e0f9769921f57)

GitOrigin-RevId: ad470814f5b8b45d892f77741b3452b8583506e0